--- a/scss/style.scss
+++ b/scss/style.scss
@@ -2,10 +2,22 @@
 	box-sizing: border-box;
 }
 
-button::-moz-focus-inner {
-	border: none;
+button {
+	cursor: pointer;
+	outline: none;
+
+	&::-moz-focus-inner {
+		border: none;
+	}
 }
 
+$inner-margin: 40px;
+$button-size: 50px;
+$text-color: #655330;
+$body-color: #C9D8CF;
+$hr-color: #CDEFD0;
+
+@import url(https://fonts.googleapis.com/css?family=Montaga);
 
 html {
 	font-size: 16px;
@@ -18,11 +30,116 @@ body {
 }
 
 .quote-wrapper {
-	min-height: 500px;
-	width: 500px;
-	margin: 5% auto 50px;
+	min-height: 340px;
+	width: 650px;
+	padding: 10px 20px 20px;
+	margin: 10% auto 50px;
 	display: flex;
 	justify-content: space-between;
 	flex-flow: column nowrap;
+
+	> hr {
+		width: 120%;
+		border-width: 2px;
+		align-self: center;
+		margin: auto 0 0;
+		border-color: $hr-color;
+	}
 }
 
+blockquote {
+	display: flex;
+	flex-flow: column nowrap;
+	margin: 1em $inner-margin 2em;
+	color: $text-color;
+	font-family: 'Montaga', serif;
+}
+
+blockquote > p {
+	quotes: '❝' '❞';
+	position: relative;
+	font-size: 1.7em;
+	margin-bottom: 10px;
+	text-align: justify;
+
+	&::before {
+		content: open-quote;
+		position: absolute;
+		top: -20px;
+		left: -35px;
+		font-size: 2em;
+	}
+}
+
+blockquote > cite {
+	align-self: flex-end;
+	font-size: 1.3em;
+	margin-top: 10px;
+}
+
+.buttons {
+	display: flex;
+	justify-content: space-between;
+	margin-top: 20px;
+
+	> button, > a {
+		width: $button-size;
+		height: $button-size;
+		border-radius: 50%;
+		border: 1px solid gray;
+		background-color: rgba(208, 255, 210, 0.59);
+		transition: 0.1s border-width;
+
+		&:first-child {
+			margin-left: $inner-margin;
+		}
+
+		&:last-child {
+			margin-right: $inner-margin;
+		}
+
+		&:active {
+			border: 4px solid gray;
+		}
+
+		> img {
+			width: 100%;
+			height: 100%;
+		}
+	}
+}
+
+.update-btn {
+	background: rgba(54, 160, 54, 0.29);
+
+	&.on {
+		border: 4px solid gray;
+	}
+}
+
+.rotating {
+	animation: 3s linear infinite paused rotate;
+
+	.on > & {
+		animation-play-state: running;
+	}
+}
+
+@keyframes rotate {
+	from {
+		transform: rotate(0deg);
+	}
+	to {
+		transform: rotate(360deg);
+	}
+
+}
+
+.share-twitter {
+	padding: 6px;
+}
+
+// REMOVE for production
+div, p, span, cite, blockquote, svg {
+	outline: 1px dotted black;
+}
