--- a/index.jade
+++ b/index.jade
@@ -6,6 +6,11 @@ block content
 			blockquote
 				p#quote-text.
 					I have come to believe that the whole world is an enigma, a harmless enigma that is made terrible by our own mad attempt to interpret it as though it had an underlying truth.
+				svg#svg-output(xmlns='http://www.w3.org/2000/svg')
+					text#static-output(x='0', y='1em')
+					text#output.animated(x='0', y='1em')
+						tspan.accum
+
 				cite Umberto Eco
 		hr
 		
