Added a way to skip fill animation

--- a/index.jade
+++ b/index.jade
@@ -7,8 +7,8 @@ block content
 				p#quote-text.
 					I have come to believe that the whole world is an enigma, a harmless enigma that is made terrible by our own mad attempt to interpret it as though it had an underlying truth.
 				svg#svg-output(xmlns='http://www.w3.org/2000/svg')
-					text#static-output.static(x='0', y='1em')
-					text#output.dynamic(x='0', y='1em')
+					text#static-output(x='0', y='1em')
+					text#dynamic-output(x='0', y='1em')
 						tspan.accum
 
 				cite Umberto Eco
