--- a/index.jade
+++ b/index.jade
@@ -6,12 +6,16 @@ block content
 			blockquote
 				p#quote-text.
 					I have come to believe that the whole world is an enigma, a harmless enigma that is made terrible by our own mad attempt to interpret it as though it had an underlying truth.
-				svg#svg-output(xmlns='http://www.w3.org/2000/svg')
+				svg#svg-output.quote-text(xmlns='http://www.w3.org/2000/svg')
 					text#static-output(x='0', y='1em')
-					text#dynamic-output(x='0', y='1em')
+					text#dynamic-output.dynamic(x='0', y='1em')
 						tspan.accum
 
-				cite Umberto Eco
+				cite
+					svg#svg-author.author(xmlns='http://www.w3.org/2000/svg')
+						text#author.dynamic(x='0', y='1em')
+							tspan.accum
+				
 		hr
 		
 		.buttons
