--- a/scss/partials/_svgtext.scss
+++ b/scss/partials/_svgtext.scss
@@ -23,7 +23,7 @@ $author-size: 1.8em;
 	text {
 		fill: none;
 		stroke-width: 2px;
-		font-family: CamBam-5;
+		font-family: CamBam-5, serif;
 	}
 
 	text.dynamic {
